# D3PM_replication

./: .gitignore  Dockerfile  README.md  pyproject.toml
d3pm/: dataset_discretize_mnist.py  diffusion_generation.py  diffusion_utilities.py  model.py  model_deeplearningai.py  model_depplearningai.py  pl_trainer.py
scripts/: train_mnist.py
tests/: test_diffusion_generation.py  test_discretizeMnist.py  test_model_deeplearningai.py
