[tool.poetry]
name = "d3pm"
version = "0.1.0"
description = "Replication of d3pm"
authors = ["Adrien B <forbu14@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
